Edit(memController):MemRoute
