# controllers/memberController.js
@@ -1,4 +1,4 @@
-import database from "../service/database";
+import database from "../service/database.js";
 import bcrypt from "bcrypt";
 import jwt from "jsonwebtoken";
 import multer from "multer";
@@ -15,22 +15,23 @@ export const createMember = async (req, res) => {
       values: [req.body.username],
     });
 
-    if (exitsUser.rows[0].exists) {
+    if (exitsUser.rows.length > 0) {
       return res.status(400).json({ message: "Username already exists" });
     }
 
+    const username = req.body.username;
     const pwd = req.body.password;
     const salt = 11;
     const passwordHash = await bcrypt.hash(pwd, salt);
+
     const result = await database.query({
         text: "INSERT INTO users (username, password) VALUES ($1, $2) RETURNING *",
-        values: [req.body.username, passwordHash],
-    })
+        values: [username, passwordHash],
+    });
 
-    const bodyData = req.body;
-    const datetime = new Date();
+    const bodyData = result.rows[0];
     bodyData.regist = true;
-    bodyData.createDate = datetime;
+    bodyData.createDate = new Date();
     res.json(bodyData);
   } catch (error) {
     console.log(error);
